Nearly finished. All functions done?

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
-"folded_lines": Array[int]([15, 285, 342, 393, 548, 553, 578, 589, 594, 602, 612, 620, 644, 688, 696, 703, 707, 711, 726, 737]),
+"column": 47,
+"folded_lines": Array[int]([15, 54, 68, 92, 107, 176, 190, 214, 284, 302, 316, 487, 507, 532, 549, 553, 573, 584, 589, 597, 607, 615, 639, 691, 698, 702, 706, 721, 732, 743, 747, 751, 755, 759]),
 "h_scroll_position": 0,
-"row": 546,
-"scroll_position": 389.0,
+"row": 472,
+"scroll_position": 201.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 77,
-"scroll_position": 49.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
+"column": 27,
 "folded_lines": Array[int]([20]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 9,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 9,
+"selection_to_column": 27,
+"selection_to_line": 9,
 "syntax_highlighter": "GDScript"
 }
