--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -12,6 +12,8 @@ run_reload_scripts=true
 
 project_settings=Rect2(3390, 989, 900, 700)
 search_help=Rect2(3200, 979, 1280, 720)
+export=Rect2(3390, 989, 900, 729)
+editor_settings=Rect2(3390, 989, 900, 700)
 
 [script_setup]
 
@@ -33,3 +35,7 @@ recent_presets=PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.752941, 1, 1, 1, 0.627451
 [scripts_panel]
 
 show_scripts_panel=true
+
+[export_options]
+
+default_filename="Star Citizen Control Panel"
