--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -4,7 +4,7 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 16,
-"folded_lines": Array[int]([15, 54, 68, 92, 107, 176, 190, 214, 284, 302, 316, 341, 392, 457, 487, 507, 532, 570, 577, 588, 593, 601, 611, 619, 643, 687, 695, 702, 706, 710, 725, 736, 773, 777, 781, 785, 789, 793]),
+"folded_lines": Array[int]([15, 457, 487, 507, 532, 570, 577, 588, 593, 601, 611, 619, 643, 687, 695, 702, 706, 710, 725, 736, 773, 777, 781, 785, 789, 793]),
 "h_scroll_position": 0,
 "row": 759,
 "scroll_position": 181.25,
