--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,20 +10,37 @@ dock_hsplit_1=0
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
+dock_1_selected_tab_idx=0
+dock_2_selected_tab_idx=0
+dock_3_selected_tab_idx=0
+dock_4_selected_tab_idx=0
+dock_5_selected_tab_idx=1
+dock_6_selected_tab_idx=0
+dock_7_selected_tab_idx=0
+dock_8_selected_tab_idx=0
+dock_floating={}
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://main.tscn", "res://setup.tscn"]
+open_scenes=PackedStringArray("res://main.tscn")
+current_scene="res://main.tscn"
+center_split_offset=0
+selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
 open_scripts=["res://globals.gd", "res://main.gd", "res://setup.gd"]
 open_help=[]
 script_split_offset=174
-list_split_offset=0
+list_split_offset=-370
+selected_script="res://main.gd"
 
 [editor_log]
 
@@ -34,3 +51,9 @@ log_filter_3=true
 log_filter_4=true
 collapse=false
 show_search=true
+
+[ShaderEditor]
+
+open_shaders=[]
+split_offset=0
+selected_shader=""
